# SQLight

./: CMakeLists.txt  CMakePresets.json  README.md
include/backend/: data_store.h  data_store.hxx
include/frontend/: app.hxx  colours.hxx  file_paths.hxx  main_frame.hxx  mainframe.hxx
src/backend/: data_store.cxx
src/frontend/: SQLight.cxx  app.cxx  events.cxx  main_frame.cxx  mainframe.cxx  ui_setup.cxx
